--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
     <link rel="stylesheet" href="CSS/external.css">
     <style>
         header {
-            background-image: url("images/rainbow.jpg");
+            background-image: url("images/rbow.jfif");
             background-size: 100% auto;
         }
-        body {
-            background-color: #F9F6FD;
-        }
-        h1 {
+        figure {
             text-align: center;
-            font-size: 100px;
-            font-family: 'Antic', sans-serif;
         }
-        h2 {
-            font-size: 40px;
+        figure img {
+            float: right;
+            width: 560px;
+            border: 1px solid black;
         }
     </style>
 </head>
@@ -49,6 +46,26 @@
             <p><b>A</b> - Asexual. The lack of a sexual attraction/desire for other people.</p>
             <p><b>+</b> - Plus. It represents the vast array of other sexual orientations, gender identities, and expressions not explicitly named in the acronym.</p>
         </section>
+        <section>
+            <h2>Progress Pride Flag</h2>
+            <figure>
+                <img src="images/pflag.jfif" alt="image of progress pride flag including the parts for intersex, trans, black, and People of Color individuals">
+            </figure>
+            <h3>Colors:</h3>
+            <p>Yellow, Purple ring</p>
+            <p>White, Pink, Blue</p>
+            <p>Black, Brown</p>
+            <p><b>Red</b></p>
+            <p>Represents life. Red also represents passion among many cultures, and passion is ideally where life originates from.</p>
+            <p><b>Orange</b></p>
+            <p>Represents healing. Orange is believed to be a fun and celebratory color. Fun and celebration are both healing activities.</p>
+            <p><b>Yellow</b></p>
+            <p>Represents sunlight. It is the flag's radiant and bright center. The color yellow is said to stimulate new ideas and thoughts.</p>
+            <p><b>Green</b></p>
+            <p></p>
+            <p><b>Blue</b></p>
+            <p><b>Purple</b></p>
+            </section>
     </main>
 </body>
 </html>
