--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
             background-image: url("images/rbow.jfif");
             background-size: 100% auto;
         }
-        figure {
-            text-align: center;
-        }
         figure img {
             float: right;
-            width: 560px;
+            width: 800px;
+            margin: 15px;
             border: 1px solid black;
         }
     </style>
@@ -44,27 +42,23 @@
                 and does not match conventional labels like gay, lesbian, or bisexual. Questioning refers to individuals in the process of determining their sexual orientation and/or gender identity.</p>
             <p><b>I</b> - Intersex. A person whose chromosomes, hormonal make-up or anatomy fall outside the categories of male or female.</p>
             <p><b>A</b> - Asexual. The lack of a sexual attraction/desire for other people.</p>
-            <p><b>+</b> - Plus. It represents the vast array of other sexual orientations, gender identities, and expressions not explicitly named in the acronym.</p>
+            <p><b>+</b> - Plus. It represents the other sexual orientations, gender identities, and expressions not named in the acronym.</p>
         </section>
         <section>
             <h2>Progress Pride Flag</h2>
             <figure>
                 <img src="images/pflag.jfif" alt="image of progress pride flag including the parts for intersex, trans, black, and People of Color individuals">
             </figure>
-            <h3>Colors:</h3>
-            <p>Yellow, Purple ring</p>
-            <p>White, Pink, Blue</p>
-            <p>Black, Brown</p>
-            <p><b>Red</b></p>
-            <p>Represents life. Red also represents passion among many cultures, and passion is ideally where life originates from.</p>
-            <p><b>Orange</b></p>
-            <p>Represents healing. Orange is believed to be a fun and celebratory color. Fun and celebration are both healing activities.</p>
-            <p><b>Yellow</b></p>
-            <p>Represents sunlight. It is the flag's radiant and bright center. The color yellow is said to stimulate new ideas and thoughts.</p>
-            <p><b>Green</b></p>
-            <p></p>
-            <p><b>Blue</b></p>
-            <p><b>Purple</b></p>
+            <h3>Colors</h3>
+            <p><b>Yellow, Purple ring - </b>The yellow with a purple ring represent intersex individuals.</p>
+            <p><b>White, Pink, Blue - </b>White, to represent people who are intersex, transitioning, or who do not have a defined gender, pink and blue, colours that have traditionally been associated with girls and boys (gender binary)</p>
+            <p><b>Black, Brown - </b>Brown and black represent people of color. This was an important addition because people of color have often been left out of the queer narrative despite being the driving force behind the movement.</p>
+            <p><b>Red - </b>Red represents life. Red also represents passion among many cultures, and passion is ideally where life originates from.</p>
+            <p><b>Orange - </b>Orange represents healing. Orange is believed to be a fun and celebratory color. Fun and celebration are both healing activities.</p>
+            <p><b>Yellow - </b>Yellow represents sunlight. It is the flag's radiant and bright center. The color yellow is said to stimulate new ideas and thoughts.</p>
+            <p><b>Green - </b>Green represents nature.</p>
+            <p><b>Blue - </b>Blue represents serenity. Blue is known as a relaxing color that soothes the soul. The color blue is often used to represent bedtime and calmness.</p>
+            <p><b>Purple - </b>Purple represents spirit.  Purple is often thought of as a regal, royal color that, on its own, denotes pride. The color purple connects us to the spiritual realm.</p>
             </section>
     </main>
 </body>
