--- a/flags.html
+++ b/flags.html
@@ -6,17 +6,9 @@
     <title>Pride</title>
     <link rel="stylesheet" href="CSS/external.css">
     <style>
-        body {
-            background-image: url(images/rainbow.jpg) no-repeat;
+        header {
+            background-image: url(images/prideflags.webp);
             background-size: 100% auto;
-        }
-        main {
-            background-color: #F9F6FD;
-        }
-        h1 {
-            text-align: center;
-            font-size: 100px;
-            font-family: 'Antic', sans-serif;
         }
     </style>
 </head>
@@ -30,8 +22,13 @@
                 <a href="support.html">SUPPORT</a>
                 <a href="contact.html">CONTACT</a>
             </nav>
-            <h1>LGBTQ+</h1>
+            <h1>FLAGS</h1>
+            <br/>
         </header>
+        <section>
+            <h3>Gay Flag</h3>
+            <p></p>
+        </section>
     </main>
 </body>
 </html>
