--- a/index.html
+++ b/index.html
@@ -12,9 +12,38 @@
         }
         figure img {
             float: right;
-            width: 800px;
-            margin: 15px;
+            width: 750px;
+            margin: 25px;
             border: 1px solid black;
+        }
+        #figure1 img {
+            transform: translate(0px, 100px);
+        }
+        #figure2 img {
+            transform: translate(0px, 215px);
+        }
+        ul li a {
+            text-decoration: none;
+            color: #4B2E83;
+        }
+        section {
+            width: 600px;
+        }
+        table {
+            width: 100%;
+            margin-top: 20px;
+            border-spacing: 10px;
+        }
+        td {
+            padding: 10px;
+            background-color: #e5dbf7;
+            border-radius: 8px;
+        }
+        footer {
+            border-top: 2px solid #4B2E83;
+        }
+        footer h4 {
+            color:gray;
         }
     </style>
 </head>
@@ -31,35 +60,117 @@
         <br/>
     </header>
     <main>
+        <figure id="figure1">
+            <img src="images/ppl.jfif" alt="Pink woman blending into blue man to symbolize the gender spectrum.">
+        </figure>
         <section>
             <h2>What each letter represents</h2>
-            <p><b>2S</b> - Two Spirit. Used by Indigenous North Americans to describe people who embody both a masculine and feminine spirit within the LGBTQ+ community</p>
-            <p><b>L</b> - Lesbian. A woman who is romantically or sexually attracted exclusively to other women.</p>
-            <p><b>G</b> - Gay. Sexual or romantic attraction to people of one's same sex. Typically referring to men.</p>
-            <p><b>B</b> - Bisexual. A person emotionally, romantically or sexually attracted to more than one sex, gender or gender identity.</p>
-            <p><b>T</b> - Transgender. An umbrella term for people whose gender identity is different from cultural expectations based on the sex they were assigned at birth.</p>
-            <p><b>Q</b> - Queer or Questioning. Queer is an umbrella term to describe sexual orientation or gender identity that does not conform to dominant societal norms (e.g., straight/heterosexual)
-                and does not match conventional labels like gay, lesbian, or bisexual. Questioning refers to individuals in the process of determining their sexual orientation and/or gender identity.</p>
-            <p><b>I</b> - Intersex. A person whose chromosomes, hormonal make-up or anatomy fall outside the categories of male or female.</p>
-            <p><b>A</b> - Asexual. The lack of a sexual attraction/desire for other people.</p>
-            <p><b>+</b> - Plus. It represents the other sexual orientations, gender identities, and expressions not named in the acronym.</p>
+            <table>
+                <tr>
+                    <td><b>2S</b></td>
+                    <td>Two-Spirit – Indigenous North American identity</td>
+                </tr>
+                <tr>
+                    <td><b>L</b></td>
+                    <td>Lesbian - A woman attracted to other women.</td>
+                </tr>
+                <tr>
+                    <td><b>G</b></td>
+                    <td>Gay - Someone(Typically men) attracted to the same gender.</td>
+                </tr>
+                <tr>
+                    <td><b>B</b></td>
+                    <td>Bisexual - Someone attracted to more than one gender.</td>
+                </tr>
+                <tr>
+                    <td><b>T</b></td>
+                    <td>Transgender - A person who's gender is different that what they were assigned at birth.</td>
+                </tr>
+                <tr>
+                    <td><b>Q</b></td>
+                    <td>Queer - A person who does not identity with any of the other labels.</td>
+                </tr>
+                <tr>
+                    <td><b>I</b></td>
+                    <td>Intersex - Someone whose chromosomes, hormonal makeup, or anatomy fall outside the categories of male or female.</td>
+                </tr>
+                <tr>
+                    <td><b>A</b></td>
+                    <td>Asexual - Someone who does not feel sexual attraction towards individuals.</td>
+                </tr>
+                <tr>
+                    <td><b>+</b></td>
+                    <td>Plus - Additional identities not named in the acronym.</td>
+                </tr>
+            </table>
         </section>
+        <figure id="figure2">
+            <img src="images/pflag.jfif" alt="image of progress pride flag including the parts for intersex, trans, black, and People of Color individuals">
+        </figure>
         <section>
             <h2>Progress Pride Flag</h2>
-            <figure>
-                <img src="images/pflag.jfif" alt="image of progress pride flag including the parts for intersex, trans, black, and People of Color individuals">
-            </figure>
-            <h3>Colors</h3>
-            <p><b>Yellow, Purple ring - </b>The yellow with a purple ring represent intersex individuals.</p>
-            <p><b>White, Pink, Blue - </b>White, to represent people who are intersex, transitioning, or who do not have a defined gender, pink and blue, colours that have traditionally been associated with girls and boys (gender binary)</p>
-            <p><b>Black, Brown - </b>Brown and black represent people of color. This was an important addition because people of color have often been left out of the queer narrative despite being the driving force behind the movement.</p>
-            <p><b>Red - </b>Red represents life. Red also represents passion among many cultures, and passion is ideally where life originates from.</p>
-            <p><b>Orange - </b>Orange represents healing. Orange is believed to be a fun and celebratory color. Fun and celebration are both healing activities.</p>
-            <p><b>Yellow - </b>Yellow represents sunlight. It is the flag's radiant and bright center. The color yellow is said to stimulate new ideas and thoughts.</p>
-            <p><b>Green - </b>Green represents nature.</p>
-            <p><b>Blue - </b>Blue represents serenity. Blue is known as a relaxing color that soothes the soul. The color blue is often used to represent bedtime and calmness.</p>
-            <p><b>Purple - </b>Purple represents spirit.  Purple is often thought of as a regal, royal color that, on its own, denotes pride. The color purple connects us to the spiritual realm.</p>
-            </section>
+            <table>
+                <tr>
+                    <td>Yellow</td>
+                    <td>Non-binary, unassigned or undefined gender.</td>
+                </tr>
+                <tr>
+                    <td>Purple ring</td>
+                    <td>Symbolizes wholesness.</td>
+                </tr>
+                <tr>
+                    <td>White</td>
+                    <td>Represents those transitioning, neutral gender or no gender, or intersex.</td>
+                </tr>
+                <tr>
+                    <td>Pink</td>
+                    <td>Traditionally represents girls.</td>
+                </tr>
+                <tr>
+                    <td>Blue</td>
+                    <td>Traditionally represents boys.</td>
+                </tr>
+                <tr>
+                    <td>Brown</td>
+                    <td>Represents people of color within the community.</td>
+                </tr>
+                <tr>
+                    <td>Black</td>
+                    <td>Represents black people within the community and those lost to AIDS.</td>
+                </tr>
+                <tr>
+                    <td>Red</td>
+                    <td>Represents life.</td>>
+                </tr>
+                <tr>
+                    <td>Orange</td>
+                    <td>Represents healing.</td>
+                </tr>
+                <tr>
+                    <td>Yellow</td>
+                    <td>Represents sunlight.</td>
+                </tr>
+                <tr>
+                    <td>Green</td>
+                    <td>Represents nature.</td>
+                </tr>
+                <tr>
+                    <td>Blue</td>
+                    <td>Represents serenity.</td>
+                </tr>
+                <tr>
+                    <td>Purple</td>
+                    <td>Represents spirit.</td>
+                </tr>
+            </table>
+        </section>
     </main>
+    <footer>
+        <h4>Citations</h4>
+        <ul type="none">
+            <li><a href="https://usw.ca/resources/2slgbtqia-glossary-list-of-definitions/">2slgbtqia glossary list of definitions.</a></li>
+            <li><a href="https://www.verywellmind.com/what-the-colors-of-the-new-pride-flag-mean-5189173">Colors of the Pride flag meanings.</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
