--- a/flags.html
+++ b/flags.html
@@ -10,24 +10,63 @@
             background-image: url(images/prideflags.webp);
             background-size: 100% auto;
         }
+        img {
+            float: right;
+            width: 250px;
+        }
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html">HOME</a>
+            <a href="flags.html" class="active">FLAGS</a>
+            <a href="history.html">HISTORY</a>
+            <a href="support.html">SUPPORT</a>
+            <a href="contact.html">CONTACT</a>
+        </nav>
+        <h1>FLAGS</h1>
+        <br/>
+    </header>
     <main>
-        <header>
-            <nav>
-                <a href="index.html">HOME</a>
-                <a href="flags.html" class="active">FLAGS</a>
-                <a href="history.html">HISTORY</a>
-                <a href="support.html">SUPPORT</a>
-                <a href="contact.html">CONTACT</a>
-            </nav>
-            <h1>FLAGS</h1>
-            <br/>
-        </header>
         <section>
+            <img src="images/sflag.png" alt="black and white striped flag">
+            <h3>Heterosexual Flag</h3>
+            <p>A flag composed of alternating black and white stripes, with a design similar to the rainbow LGBT pride flag, was created to represent straight pride.</p>
+            <br/>
+            <br/>
+            <img src="images/sally.png" alt="black and white striped flag changing to a rainbow letter A in the middle">
+            <h3>Straight Ally</h3>
+            <p>The Straight Ally flag is using the black white "colors" of the heterosexual flag as a field, it adds a large rainbow colored "A" (for "Ally") to indicate straight support for the Gay Pride/Equal Marriage movement.</p>
+            <br/>
+            <br/>
+            <img src="images/gflag.png" alt="striped flag going from blue, getting lighter, going to white, then darkening to green">
             <h3>Gay Flag</h3>
-            <p></p>
+            <p>Meant to be inclusive of a much wide range of gay men, including but not limited to transgender, intersex, and gender nonconforming men.</p>
+            <br/>
+            <br/>
+            <h3>Lesbian Flag</h3>
+            <p>The shades of red and orange represent gender nonconformity, independence, and community; the white stripe represents a unique relationship to womanhood; and the shades of pink represent serenity and peace, love and sex, and femininity.</p>
+            <br/>
+            <br/>
+            <h3>Bisexual Flag</h3>
+            <p>Pink represents attraction to people of the same gender; blue represents an attraction to those of an opposite or different gender; and purple represents having an attraction to two or more genders.</p>
+            <br/>
+            <br/>
+            <h3>Transgender Flag</h3>
+            <p>Blue represents the traditional color for baby boys, pink represents the traditional color for baby girls, and white represents individuals transitioning, those with neutral or no gender, and those who are intersex. </p>
+            <br/>
+            <br/>
+            <h3>Non-Binary Flag</h3>
+            <p>Yellow represents people whose gender doesn’t exist within the cisgender binary; white represents people with all or many genders; purple represents people with mixed genders; and black represents people who identify as not having any gender. </p>
+            <br/>
+            <br/>
+            <h3>Pansexual Flag</h3>
+            <p>Hot pink represents individuals who identify as female, bright blue represents individuals who identify as male, and canary yellow represents individuals who identify anywhere in the gender spectrum. </p>
+            <br/>
+            <br/>
+            <h3>Intersex Flag</h3>
+            <p> Neither color is associated with the social constructs of the gender binary. The circle, perfect and unbroken, represents the wholeness of intersex people.</p>
         </section>
     </main>
 </body>
