--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
         }
         figure img {
             float: right;
-            width: 750px;
-            margin: 25px;
+            width: 30%;
+            margin: 15px;
             border: 1px solid black;
-        }
-        #figure1 img {
-            transform: translate(0px, 100px);
-        }
-        #figure2 img {
-            transform: translate(0px, 215px);
         }
         ul li a {
             text-decoration: none;
