--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             margin: 15px;
             border: 1px solid black;
         }
+        #figure1 {
+            transform: translate(0px, 100px);
+        }
+        #figure2 {
+            transform: translate(0px, 215px);
+        }
         ul li a {
             text-decoration: none;
             color: #4B2E83;
