--- a/flags.html
+++ b/flags.html
@@ -12,7 +12,7 @@
         }
         img {
             float: right;
-            width: 250px;
+            width: 20%;
         }
     </style>
 </head>
