--- a/contact.html
+++ b/contact.html
@@ -21,17 +21,17 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+           <a href="index.html">HOME</a>
+            <a href="flags.html">FLAGS</a>
+            <a href="history.html">HISTORY</a>
+            <a href="support.html" class="active">SUPPORT</a>
+            <a href="contact.html">CONTACT</a>
+        </nav>
+        <h1>LGBTQ+</h1>
+    </header>
     <main>
-        <header>
-            <nav>
-                <a href="index.html">HOME</a>
-                <a href="flags.html">FLAGS</a>
-                <a href="history.html">HISTORY</a>
-                <a href="support.html">SUPPORT</a>
-                <a href="contact.html" class="active">CONTACT</a>
-            </nav>
-            <h1>LGBTQ+</h1>
-        </header>
     </main>
 </body>
 </html>
