--- a/history.html
+++ b/history.html
@@ -10,14 +10,6 @@
             background-image: url(images/rainbow.jpg) no-repeat;
             background-size: 100% auto;
         }
-        main {
-            background-color: #F9F6FD;
-        }
-        h1 {
-            text-align: center;
-            font-size: 100px;
-            font-family: 'Antic', sans-serif;
-        }
     </style>
 </head>
 <body>
@@ -29,7 +21,7 @@
             <a href="support.html">SUPPORT</a>
             <a href="contact.html">CONTACT</a>
         </nav>
-        <h1>LGBTQ+</h1>
+        <h1>HISTORY</h1>
     </header>
     <main>
     </main>
