--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,6 @@
             background-image: url(images/rainbow.jpg) no-repeat;
             background-size: 100% auto;
         }
-        main {
-            background-color: #F9F6FD;
-        }
-        h1 {
-            text-align: center;
-            font-size: 100px;
-            font-family: 'Antic', sans-serif;
-        }
     </style>
 </head>
 <body>
@@ -26,10 +18,10 @@
            <a href="index.html">HOME</a>
             <a href="flags.html">FLAGS</a>
             <a href="history.html">HISTORY</a>
-            <a href="support.html" class="active">SUPPORT</a>
-            <a href="contact.html">CONTACT</a>
+            <a href="support.html">SUPPORT</a>
+            <a href="contact.html" class="active">CONTACT</a>
         </nav>
-        <h1>LGBTQ+</h1>
+        <h1>CONTACT US</h1>
     </header>
     <main>
     </main>
