--- a/flags.html
+++ b/flags.html
@@ -19,13 +19,13 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="active"> HOME </a>
-            <a href="flags.html">FLAGS</a>
+            <a href="index.html">HOME</a>
+            <a href="flags.html" class="active">FLAGS</a>
             <a href="history.html">HISTORY</a>
             <a href="support.html">SUPPORT</a>
             <a href="contact.html">CONTACT</a>
         </nav>
-        <h1>2SLGBTQIA+</h1>
+        <h1>FLAGS</h1>
         <br/>
     </header>
     <main>
