--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             <table>
                 <tr>
                     <td>Yellow</td>
-                    <td>Non-binary, unassigned or undefined gender.</td>
+                    <td>Represents non-binary, unassigned or undefined gender.</td>
                 </tr>
                 <tr>
                     <td>Purple ring</td>
-                    <td>Symbolizes wholesness.</td>
+                    <td>Symbolizes wholesness of intersex individuals.</td>
                 </tr>
                 <tr>
                     <td>White</td>
@@ -124,11 +124,11 @@
                 </tr>
                 <tr>
                     <td>Pink</td>
-                    <td>Traditionally represents girls.</td>
+                    <td>Traditional color for girls.</td>
                 </tr>
                 <tr>
                     <td>Blue</td>
-                    <td>Traditionally represents boys.</td>
+                    <td>Traditional color for boys.</td>
                 </tr>
                 <tr>
                     <td>Brown</td>
