--- a/flags.html
+++ b/flags.html
@@ -33,7 +33,7 @@
         <section>
             <h3>Heterosexual Flag</h3>
             <img src="images/sflag.png" alt="black and white striped flag">
-            <p>A flag composed of alternating black and white stripes, with a design similar to the rainbow LGBT pride flag, was created to represent straight pride.</p>
+            <p>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+ pride flag, was created to represent straight pride.</p>
             <br/>
             <br/>
             <br/>
