--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,27 @@
         <h1>CONTACT US</h1>
     </header>
     <main>
+        <p>Questions or feedback? Reach out using the information below or fill out our contact form!</p>
+        <form>
+            <fieldset>
+                <legend>Questions or Feedback</legend>
+                <label for="fname">First Name: </label>
+                <br/>
+                <input type="text" id="fname" name="fname">
+                <br/>
+                <label for="lname">Last Name: </label>
+                <br/>
+                <input type="text" id="lname" name="lname">
+                <br/>
+                <label for="email">Email: </label>
+                <br/>
+                <input type="text" id="email" name="email">
+                <br/>
+                <label for="questionsorfeedback">Questions or Feedback</label>
+                <br/>
+                <input type="textarea" id="questionsorfeedback" name="Questions or Feedback">
+            </fieldset>
+        </form>
     </main>
 </body>
 </html>
