--- a/support.html
+++ b/support.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="CSS/external.css">
     <style>
         body {
-            background-image: url(images/rainbow.jpg) no-repeat;
-            background-size: 100% auto;
+            background-color: #F9F6FD;
         }
     </style>
 </head>
