--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,11 @@
         body {
             background-color: #F9F6FD;
         }
+        form {
+            float: right;
+            width: 50%;
+            background-color: #4B2E83;
+        }
     </style>
 </head>
 <body>
