--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <br/>
                 <label for="questionsorfeedback">Questions or Feedback</label>
                 <br/>
-                <input type="textarea" id="questionsorfeedback" name="Questions or Feedback">
+                <input type="textarea" rows="30" cols="15" id="questionsorfeedback" name="Questions or Feedback">
             </fieldset>
         </form>
     </main>
