--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
             float: right;
             width: 50%;
             background-color: #4B2E83;
+            padding-bottom: 5px;
+            color: white;
         }
     </style>
 </head>
