--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <table>
                 <tr>
                     <td><b>2S</b></td>
-                    <td>Two-Spirit – Indigenous North American identity</td>
+                    <td>Two-Spirit - Indigenous North American identity</td>
                 </tr>
                 <tr>
                     <td><b>L</b></td>
