--- a/contact.html
+++ b/contact.html
@@ -52,5 +52,8 @@
         </form>
         <p>Questions or feedback? Reach out using the information below or fill out our contact form!</p>
     </main>
+    <footer>
+        <p>&copy; LGBTQ+ human rights movement</p>
+    </footer>
 </body>
 </html>
