--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             float: right;
             width: 50%;
             background-color: #4B2E83;
-            padding-bottom: 5px;
+            padding: 0px 5px 5px 5px;
             color: white;
         }
     </style>
