--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,9 @@
                 <input type="textarea" rows="30" cols="15" id="questionsorfeedback" name="Questions or Feedback">
             </fieldset>
         </form>
-        <p>Questions or feedback? Reach out using the information below or fill out our contact form!</p>
+        <p>Questions or feedback?
+            <br/>
+            Reach out using the information below or fill out our contact form!</p>
     </main>
     <footer>
         <p>&copy; LGBTQ+ human rights movement</p>
