--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
             background-color: #4B2E83;
             padding: 0px 5px 5px 5px;
             color: white;
+            margin: 10px;
         }
     </style>
 </head>
