--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,10 @@
         <h1>CONTACT US</h1>
     </header>
     <main>
+        <p>Questions or feedback?
+            <br/>
+            Reach out using the information below or fill out our contact form!
+        </p>
         <form>
             <fieldset>
                 <legend>Questions or Feedback</legend>
@@ -51,9 +55,7 @@
                 <input type="textarea" rows="30" cols="15" id="questionsorfeedback" name="Questions or Feedback">
             </fieldset>
         </form>
-        <p>Questions or feedback?
-            <br/>
-            Reach out using the information below or fill out our contact form!</p>
+        <p></p>
     </main>
     <footer>
         <p>&copy; LGBTQ+ human rights movement</p>
