--- a/support.html
+++ b/support.html
@@ -6,8 +6,8 @@
     <title>Project</title>
     <link rel="stylesheet" href="CSS/external.css">
     <style>
-        body {
-            background-color: #F9F6FD;
+        header {
+            background-image: url(images/support.jpg);
         }
     </style>
 </head>
