--- a/history.html
+++ b/history.html
@@ -8,6 +8,7 @@
     <style>
         header {
             background-image: url(images/history.jpg);
+            background-size: 100% auto;
         }
     </style>
 </head>
