--- a/support.html
+++ b/support.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/external.css">
     <style>
         header {
-            background-image: url(images/support.jpg) no-repeat;
+            background-image: url(images/support.jpg);
             background-size: 100% auto;
         }
     </style>
