--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,9 @@
                 <input type="textarea" rows="30" cols="15" id="questionsorfeedback" name="Questions or Feedback">
             </fieldset>
         </form>
-        <p></p>
+        <p>British Columbia: +1 604-933-8439</p>
+        <p>Manitoba: +1 584-367-9829</p>
+        <p>Email: contact@mbpride.com | questions@bcpride.com</p>
     </main>
     <footer>
         <p>&copy; LGBTQ+ human rights movement</p>
