--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
         <h1>CONTACT US</h1>
     </header>
     <main>
-        <p>Questions or feedback?
+        <h3>Questions or feedback?
             <br/>
             Reach out using the information below or fill out our contact form!
-        </p>
+        </h3>
         <form>
             <fieldset>
                 <legend>Questions or Feedback</legend>
