--- a/support.html
+++ b/support.html
@@ -24,6 +24,8 @@
         <h1>SUPPORT</h1>
     </header>
     <main>
+        <p>Being apart of the LGBTQ+ community is amazing but it also means that you will most likely encounter discrimination because of your sexuality, gender, and/or identity. If not you, then maybe your friends, your family. Here is how you can support them, whether they need it, or just because you want to.</p>
+        <!--embed video here :)-->
     </main>
 </body>
 </html>
