--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <br/>
                 <label for="questionsorfeedback">Questions or Feedback</label>
                 <br/>
-                <input type="textarea" rows="30" cols="15" id="questionsorfeedback" name="Questions or Feedback">
+                <textarea id="questionsorfeedback" name="QuestionsorFeedback" rows="8" cols="50"></textarea>
             </fieldset>
         </form>
         <p>British Columbia: +1 604-933-8439</p>
