--- a/events.html
+++ b/events.html
@@ -18,18 +18,12 @@
         <br/>
     </header>
     <main>
-        <h2>January</h2>
-        <h2>February</h2>
-        <h2>March</h2>
-        <h2>April</h2>
-        <h2>May</h2>
-        <h2>June</h2>
-        <h2>July</h2>
-        <h2>August</h2>
-        <h2>September</h2>
-        <h2>October</h2>
-        <h2>November</h2>
-        <h2>December</h2>
+        <table>
+            <tr>
+                <th>January</th>
+                <td><b> 27 -</b> International ???</td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
