--- a/events.html
+++ b/events.html
@@ -23,6 +23,39 @@
                 <th>January</th>
                 <td><b> 27 -</b> International ???</td>
             </tr>
+            <tr>
+                <th>February</th>
+            </tr>
+            <tr>
+                <th>March</th>
+            </tr>
+            <tr>
+                <th>April</th>
+            </tr>
+            <tr>
+                <th>May</th>
+            </tr>
+            <tr>
+                <th>June</th>
+            </tr>
+            <tr>
+                <th>July</th>
+            </tr>
+            <tr>
+                <th>August</th>
+            </tr>
+            <tr>
+                <th>September</th>
+            </tr>
+            <tr>
+                <th>October</th>
+            </tr>
+            <tr>
+                <th>November</th>
+            </tr>
+            <tr>
+                <th>December</th>
+            </tr>
         </table>
     </main>
 </body>
