--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
+    <link href="stylesheet" rel="css/external.css">
 </head>
 <body>
     <header>
