--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
         }
         form {
             float: right;
-            width: 50%;
+            width: 35%;
             background-color: #4B2E83;
-            padding: 0px 5px 5px 5px;
+            padding: 10px 15px 15px 15px;
             color: white;
             margin: 10px;
         }
@@ -22,7 +22,8 @@
 <body>
     <header>
         <nav>
-           <a href="index.html">HOME</a>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
+            <a href="index.html">HOME</a>
             <a href="flags.html">FLAGS</a>
             <a href="history.html">HISTORY</a>
             <a href="support.html">SUPPORT</a>
@@ -38,7 +39,7 @@
         <br/>
         <form>
             <fieldset>
-                <legend>Questions or Feedback</legend>
+                <legend><b>Questions or Feedback</b></legend>
                 <label for="fname">First Name: </label>
                 <br/>
                 <input type="text" id="fname" name="fname">
