--- a/events.html
+++ b/events.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
-    <link href="stylesheet" rel="css/external.css">
+    <link rel="stylesheet" href="CSS/external.css">
 </head>
 <body>
     <header>
         <nav>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
             <a href="index.html">HOME</a>
             <a href="flags.html">FLAGS</a>
             <a href="history.html">HISTORY</a>
-            <a href="support.html" class="active">SUPPORT</a>
+            <a href="support.html">SUPPORT</a>
             <a href="contact.html">CONTACT</a>
         </nav>
         <h1>Events</h1>
