--- a/history.html
+++ b/history.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <nav>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
             <a href="index.html">HOME</a>
             <a href="flags.html">FLAGS</a>
             <a href="history.html" class="active">HISTORY</a>
