--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <body>
     <header>
         <nav>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
             <a href="index.html" class="active">HOME </a>
             <a href="flags.html">FLAGS </a>
             <a href="history.html">HISTORY</a>
@@ -105,8 +106,9 @@
             </table>
         </section>
         <figure id="figure2">
-            <img src="images/pflag.jfif" alt="image of progress pride flag including the parts for intersex, trans, black, and People of Color individuals">
+            <img src="images/Pride-Flags.jpg" alt="image of rainbow flag, trans flag, pansexual flag, progress pride flag, bisexual flag, non-binary flag, asexual flag, lesbian flag, and intersex flag in a 3 by 3 grid">
         </figure>
+        <br/>
         <section>
             <h2>Progress Pride Flag</h2>
             <table>
