--- a/flags.html
+++ b/flags.html
@@ -13,13 +13,14 @@
         img {
             float: right;
             width: 20%;
-            margin: 10px;
+            margin: 5px;
         }
     </style>
 </head>
 <body>
     <header>
         <nav>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
             <a href="index.html">HOME</a>
             <a href="flags.html" class="active">FLAGS</a>
             <a href="history.html">HISTORY</a>
