--- a/support.html
+++ b/support.html
@@ -10,6 +10,21 @@
             background-image: url(images/support.jpg);
             background-size: 100% auto;
         }
+        table {
+            width: 100%;
+            margin-top: 20px;
+            border-spacing: 10px;
+        }
+        table th {
+            padding: 10px;
+            background-color: #e5dbf7;
+            border-radius: 8px;
+        }
+        table td {
+            padding: 10px;
+            background-color: #e5dbf7;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
@@ -29,7 +44,95 @@
     <main>
         <p>Being apart of the LGBTQ+ community is amazing but it also means that you will most likely encounter discrimination because of your sexuality, gender, and/or identity. If not you, then maybe your friends, your family. Here is how you can support them, whether they need it, or just because you want to.</p>
         <!--embed video here :)-->
-        <a href="events.html" target="_blank">Here is a link to a list dates for special events like Pride Month, Lesbian Visibilty Day/Week, etc.</p>
+        <section>
+            <p>Here is a list of dates special events like Pride Month, Lesbian Visibilty Day/Week, etc.</p>
+                <table>
+                <tr>
+                    <th>January</th>
+                    <td><b> 27 -</b> International Holocaust Remembrance Day</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>February</th>
+                    <td><b>12 -</b> National Freedom to Marry Day</td>
+                    <td><b>16-22 -</b> Aromantic Spectrum Awareness Week</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>March</th>
+                    <td><b>1 - 31</b> Bisexual Health Awareness Month</td>
+                    <td><b>31 -</b> International Transgender Day of Visibility</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>April</th>
+                    <td><b>6 -</b> International Asexuality Day</td>
+                    <td><b>18 -</b> Nonbinary Parents Day</td>
+                    <td><b>26 -</b> Lesbian Visibility Day</td>
+                    <td><b>Last week -</b> Lesbian Visibility Week</td>
+                </tr>
+                <tr>
+                    <th>May</th>
+                    <td><b>17 -</b> International Day Against Homophobia, Biphobia, and Transphobia</td>
+                    <td><b>24 -</b> Pansexual & Panromantic Day</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>June</th>
+                    <td><b>1 - 30 -</b> Pride Month</td>
+                    <td><b>28 -</b> Stonewall Riots Anniversary</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>July</th>
+                    <td><b>1st Saturday -</b> Femme Appreciation Day</td>
+                    <td><b>14 -</b> International Nonbinary People’s Day</td>
+                    <td><b>16 -</b> International Drag Day </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>August</th>
+                    <td><b>2nd Sunday -</b> Gay Uncle Day</td>
+                    <td><b>18 -</b> Butch Appreciation Day</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>September</th>
+                    <td><b>23 -</b> Bisexual Visibility Day</td>
+                    <td><b>Last Week -</b> Ally Week</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>October</th>
+                    <td><b>1 - 31 -</b> LGBT History Month</td>
+                    <td><b>8 -</b> International Lesbian Day</td>
+                    <td><b>11 -</b> National Coming Out Day</td>
+                    <td><b>26 -</b> Intersex Awareness Day</td>
+                </tr>
+                <tr>
+                    <th>November</th>
+                    <td><b>1 - 30 -</b> Trans Awareness Month</td>
+                    <td><b>1st Sunday -</b> Transgender Parent Day</td>
+                    <td><b>20 -</b> Transgender Day Of Remembrance</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>December</th>
+                    <td><b>1 -</b> World AIDS Day</td>
+                    <td><b>8 -</b> Pansexual Pride Day</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </section>
     </main>
 </body>
 </html>
