--- a/flags.html
+++ b/flags.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/Pride-Flags.jpg"></a>
             <a href="index.html">HOME</a>
             <a href="flags.html" class="active">FLAGS</a>
             <a href="history.html">HISTORY</a>
