--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/prideflag.png"></a>
+            <a href="index.html" style="background-color: #F6F9FD;"><img src="images/Pride-Flags.jpg"></a>
             <a href="index.html" class="active">HOME </a>
             <a href="flags.html">FLAGS </a>
             <a href="history.html">HISTORY</a>
