--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
     <title>Project</title>
     <link rel="stylesheet" href="CSS/external.css">
     <style>
+        header {
+            background-image: url(images/cac.jpg);
+            background-size: 100% auto;
+        }
         body {
             background-color: #F9F6FD;
         }
@@ -30,6 +34,7 @@
             <a href="contact.html" class="active">CONTACT</a>
         </nav>
         <h1>CONTACT US</h1>
+        <br/>
     </header>
     <main>
         <h3>Questions or feedback?
