--- a/flags.html
+++ b/flags.html
@@ -12,7 +12,7 @@
         }
         img {
             float: right;
-            width: 20%;
+            width: 15%;
             margin: 5px;
         }
     </style>
@@ -85,5 +85,13 @@
             <p> Neither color is associated with the social constructs of the gender binary. The circle, perfect and unbroken, represents the wholeness of intersex people.</p>
         </section>
     </main>
+    <footer>
+        <h4>Citations</h4>
+        <ul type="none">
+            <li><a href="https://thedaily.case.edu/waving-proudly-learn-the-meanings-behind-lgbt-flags/">Link to source for meaning behind flag colors</a></li>
+            <li><a href="https://www.volvogroup.com/en/news-and-media/news/2021/jun/lgbtq-pride-flags-and-what-they-stand-for.html">Link to source for meaning behind flag colors</a> </li>
+            <li><a href="https://flags.fandom.com/wiki/Straight_flag">Link to source for meaning behind straight flag</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
