--- a/support.html
+++ b/support.html
@@ -42,8 +42,9 @@
         <br/>
     </header>
     <main>
+        <h2>Discrimination is real</h2>
         <p>Being apart of the LGBTQ+ community is amazing but it also means that you will most likely encounter discrimination because of your sexuality, gender, and/or identity. If not you, then maybe your friends, your family. Here is how you can support them, whether they need it, or just because you want to.</p>
-        <!--embed video here :)-->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/27yaTsX5OHA?si=p_WFXz8EVJ9vWBg6" title="Understanding LGBTQ+ discrimination" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <section>
             <p>Here is a list of dates special events like Pride Month, Lesbian Visibilty Day/Week, etc.</p>
                 <table>
