--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,16 @@
     </style>
 </head>
 <body>
+    <!--Nav and heading 1-->
     <header>
         <nav>
+            <!--Inline css. background color of link set to #F6F9FD. Link is an image-->
             <a href="index.html" style="background-color: #F6F9FD;"><img src="images/Pride-Flags.jpg"></a>
             <a href="index.html">HOME</a>
             <a href="flags.html">FLAGS</a>
             <a href="history.html">HISTORY</a>
-            <a href="support.html">SUPPORT</a>
+            <a href="support.html">SUPPORT</a>    
+            <!--Link with class value of active-->
             <a href="contact.html" class="active">CONTACT</a>
         </nav>
         <h1>CONTACT US</h1>
